# summit-spark-migration-workshop

./: README.md  demo_data.py  hands_on_lab_spark_to_snowflake.ipynb  hol-instructions.md  sample_input_data.csv
workshop-backups/spark-migration/snowpark-connect/: pyproject.toml
workshop-backups/spark-migration/snowpark-connect/migrate-pyspark-to-snowpark-connect/: SKILL.md
workshop-backups/spark-migration/snowpark-connect/migrate-pyspark-to-snowpark-connect/agents/: import-critic.md  reporter-critic.md  reporter.md
workshop-backups/spark-migration/snowpark-connect/migrate-pyspark-to-snowpark-connect/references/: fix-rules.md
workshop-backups/spark-migration/snowpark-connect/migrate-spark-scala-to-snowpark-connect/: SKILL.md
workshop-backups/spark-migration/snowpark-connect/migrate-spark-scala-to-snowpark-connect/agents/: analyzer-critic.md  fixer-critic.md  import-critic.md  import-updater.md
workshop-backups/spark-migration/snowpark-connect/references/python/: troubleshooting.md
workshop-backups/spark-migration/snowpark-connect/references/scala/: behavioral-differences.md  rdd-conversion.md  troubleshooting.md  (+1 more)
workshop-backups/spark-migration/snowpark-connect/scripts/: analyze_pyspark.py  analyze_scala.py  code_normalization.py  generate_scos_reports.py  generate_transformations.py  run_scos_migration.sh  scos_session.py  scos_to_ewi_bridge.py
workshop-backups/spark-migration/snowpark-connect/validate-pyspark-to-snowpark-connect/: SKILL.md
workshop-backups/spark-migration/snowpark-connect/validate-spark-scala-to-snowpark-connect/: SKILL.md
(+1021 files in other folders)
