[project]
name = "snowpark_connect_skills"
version = "0.1.0"
description = "Snowpark Connect - Migrate and validate PySpark workloads for Snowflake Snowpark Connect (SCOS)"
requires-python = ">=3.10"
dependencies = [
    "snowpark-connect[jdk]",
    "pyspark>=3.5,<4",
    "snowflake-core>=0.10.0",
    "snowflake-ml-python>=1.5.0",
    "nbconvert",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
